# ai-fashion-house

./: Makefile  README.md  main.py  prompts.txt  pyproject.toml  run.sh
scripts/: setup_rag.sql  setup_rag_connection.sh
src/ai_fashion_house/: __init__.py
src/ai_fashion_house/agents/creative_agent/: agent.py  imagen.py  veo.py
src/ai_fashion_house/agents/fashion_design_agent/: agent.py
src/ai_fashion_house/agents/marketing_agent/: veo.py
src/ai_fashion_house/agents/met_rag_agent/: agent.py  prompts.py  tools.py
src/ai_fashion_house/agents/research_agent/: agent.py
src/ai_fashion_house/agents/style_agent/: agent.py
src/ai_fashion_house/creative_agent/: agent.py  imagen.py  veo.py
src/ai_fashion_house/met_rag_agent/: agent.py  bigq.sh  rag_results.csv  tools.py
src/ai_fashion_house/style_agent/: agent.py
src/ai_fashion_house/web/: api.py
src/ai_fashion_house/web/static/: index.html
src/ai_fashion_house/web/static/assets/: index-B2NRN4h_.js  index-Br03TaE8.css  index-C5aBUI2X.js  index-C9DLZKSA.js  index-CNxfx5cg.js  (+2 more)
style_agent/: agent.py  bigq.sql  bigq_rag.py  imagen.py  met_rag.py  prompt.py  tools.py  veo.py
ui/: index.html  package.json  vite.config.js
ui/src/: App.css  App.jsx  main.jsx
ui/src/components/AgentArtifactGallery/: index.jsx
ui/src/components/AgentLogViewer/: index.jsx
ui/src/components/AppStepper/: index.jsx
ui/src/components/StateViewer/: index.jsx
ui/src/contexts/WebSocketContext/: index.jsx
ui/src/layouts/Default/: index.jsx
ui/src/pages/Home/: index.jsx
ui/src/pages/ProjectOverviewPage/: index.jsx
